--- a/src/app/app.html
+++ b/src/app/app.html
@@ -18,22 +18,19 @@
 
   <section class="mx-auto mt-6 grid w-full max-w-5xl gap-6 lg:grid-cols-[1.1fr_0.9fr]" aria-label="Carte et panel">
     <app-map-view
-      [places]="allPlaces"
-      [selectedPlaceId]="selectedPlaceId()"
-      [hoveredPlaceId]="hoveredPlaceId()"
-      (viewportChanged)="handleViewportChanged()"
-      (markerSelected)="handleMarkerSelected($event)"
+      [places]="store.allPlaces"
+      [selectedPlaceId]="store.selectedPlaceId()"
+      [hoveredPlaceId]="store.hoveredPlaceId()"
+      (viewportChanged)="store.handleViewportChanged()"
+      (markerSelected)="store.selectMarker($event)"
     />
 
     <app-right-panel
-      [visiblePlaces]="visibleFilteredPlaces()"
-      [selectedTypes]="selectedTypes()"
-      [selectedPlaceId]="selectedPlaceId()"
-      [hoveredPlaceId]="hoveredPlaceId()"
-      [availableTypes]="availableTypes"
-      (typeToggled)="toggleType($event)"
-      (placeHovered)="setHoveredPlace($event)"
-      (placeSelected)="selectPlace($event)"
+      [visiblePlaces]="store.visibleFilteredPlaces()"
+      [selectedTypes]="store.selectedTypes()"
+      [selectedPlaceId]="store.selectedPlaceId()"
+      [hoveredPlaceId]="store.hoveredPlaceId()"
+      [availableTypes]="store.availableTypes"
     />
   </section>
 </main>
