--- a/src/app/app.html
+++ b/src/app/app.html
@@ -17,20 +17,7 @@
   </header>
 
   <section class="mx-auto mt-6 grid w-full max-w-5xl gap-6 lg:grid-cols-[1.1fr_0.9fr]" aria-label="Carte et panel">
-    <app-map-view
-      [places]="store.allPlaces"
-      [selectedPlaceId]="store.selectedPlaceId()"
-      [hoveredPlaceId]="store.hoveredPlaceId()"
-      (viewportChanged)="store.handleViewportChanged()"
-      (markerSelected)="store.selectMarker($event)"
-    />
-
-    <app-right-panel
-      [visiblePlaces]="store.visibleFilteredPlaces()"
-      [selectedTypes]="store.selectedTypes()"
-      [selectedPlaceId]="store.selectedPlaceId()"
-      [hoveredPlaceId]="store.hoveredPlaceId()"
-      [availableTypes]="store.availableTypes"
-    />
+    <app-map-view />
+    <app-right-panel />
   </section>
 </main>
