--- a/src/app/components/map-view/map-view.component.scss
+++ b/src/app/components/map-view/map-view.component.scss
@@ -2,3 +2,160 @@
   display: block;
   min-height: 0;
 }
+
+.map-surface {
+  min-height: 20rem;
+}
+
+:host ::ng-deep .leaflet-container {
+  background: rgb(15 23 42);
+  font-family: inherit;
+}
+
+:host ::ng-deep .culture-place-marker {
+  background: transparent;
+  border: 0;
+}
+
+:host ::ng-deep .culture-place-marker__dot {
+  display: grid;
+  place-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 999px;
+  border: 2px solid rgb(255 255 255 / 0.95);
+  background: rgb(14 165 233);
+  box-shadow:
+    0 0 0 2px rgb(2 6 23 / 0.45),
+    0 3px 10px rgb(2 6 23 / 0.55);
+}
+
+:host ::ng-deep .culture-place-marker__icon {
+  display: inline-flex;
+  width: 16px;
+  height: 16px;
+  color: rgb(255 255 255);
+}
+
+:host ::ng-deep .culture-place-marker__icon svg {
+  width: 16px;
+  height: 16px;
+  fill: none;
+  stroke: currentColor;
+  stroke-width: 1.8;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+}
+
+:host ::ng-deep .culture-place-marker--museum .culture-place-marker__dot {
+  background: rgb(59 130 246);
+}
+
+:host ::ng-deep .culture-place-marker--gallery .culture-place-marker__dot {
+  background: rgb(236 72 153);
+}
+
+:host ::ng-deep .culture-place-marker--theater .culture-place-marker__dot {
+  background: rgb(249 115 22);
+}
+
+:host ::ng-deep .culture-place-marker--library .culture-place-marker__dot {
+  background: rgb(16 185 129);
+}
+
+:host ::ng-deep .culture-place-marker--heritage .culture-place-marker__dot {
+  background: rgb(168 85 247);
+}
+
+:host ::ng-deep .culture-place-marker--arts-center .culture-place-marker__dot {
+  background: rgb(234 179 8);
+}
+
+:host ::ng-deep .culture-place-marker--arts-center .culture-place-marker__icon {
+  color: rgb(15 23 42);
+}
+
+:host ::ng-deep .culture-place-tooltip-shell {
+  background: transparent;
+  border: 0;
+  box-shadow: none;
+}
+
+:host ::ng-deep .culture-place-tooltip-shell::before {
+  border-top-color: rgb(15 23 42 / 0.95);
+}
+
+:host ::ng-deep .culture-place-tooltip {
+  min-width: 9rem;
+  padding: 0.45rem 0.6rem;
+  border-radius: 0.65rem;
+  border: 1px solid rgb(255 255 255 / 0.12);
+  background: rgb(15 23 42 / 0.95);
+  color: rgb(248 250 252);
+  box-shadow: 0 8px 22px rgb(2 6 23 / 0.35);
+}
+
+:host ::ng-deep .culture-place-tooltip__name {
+  font-size: 0.78rem;
+  font-weight: 700;
+  line-height: 1.2;
+}
+
+:host ::ng-deep .culture-place-tooltip__meta {
+  margin-top: 0.15rem;
+  font-size: 0.68rem;
+  color: rgb(191 219 254);
+  line-height: 1.15;
+}
+
+/* Make clusters visually distinct from place markers (neutral, ringed, larger). */
+:host ::ng-deep .marker-cluster,
+:host ::ng-deep .marker-cluster-small,
+:host ::ng-deep .marker-cluster-medium,
+:host ::ng-deep .marker-cluster-large {
+  background: transparent;
+}
+
+:host ::ng-deep .marker-cluster div,
+:host ::ng-deep .marker-cluster-small div,
+:host ::ng-deep .marker-cluster-medium div,
+:host ::ng-deep .marker-cluster-large div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 38px;
+  height: 38px;
+  margin-left: 1px;
+  margin-top: 1px;
+  border-radius: 999px;
+  border: 2px solid rgb(255 255 255 / 0.95);
+  background: rgb(51 65 85 / 0.88);
+  color: rgb(248 250 252);
+  font-weight: 800;
+  font-size: 0.85rem;
+  box-shadow:
+    0 0 0 3px rgb(148 163 184 / 0.28),
+    0 6px 14px rgb(2 6 23 / 0.35);
+}
+
+:host ::ng-deep .marker-cluster span {
+  line-height: 1;
+}
+
+:host ::ng-deep .marker-cluster-small div {
+  box-shadow:
+    0 0 0 3px rgb(56 189 248 / 0.2),
+    0 6px 14px rgb(2 6 23 / 0.35);
+}
+
+:host ::ng-deep .marker-cluster-medium div {
+  box-shadow:
+    0 0 0 3px rgb(250 204 21 / 0.22),
+    0 6px 14px rgb(2 6 23 / 0.35);
+}
+
+:host ::ng-deep .marker-cluster-large div {
+  box-shadow:
+    0 0 0 3px rgb(248 113 113 / 0.22),
+    0 6px 14px rgb(2 6 23 / 0.35);
+}
