feat: add type filters

--- a/src/app/components/place-card/place-card.component.html
+++ b/src/app/components/place-card/place-card.component.html
@@ -17,7 +17,7 @@
     <span
       class="shrink-0 self-start whitespace-nowrap rounded-full bg-black/20 px-2 py-1 text-[10px] font-medium text-slate-200"
     >
-      {{ place().type }}
+      {{ placeTypeLabel() }}
     </span>
   </div>
 
