--- a/src/app/components/map-view/map-view.component.html
+++ b/src/app/components/map-view/map-view.component.html
@@ -1,5 +1,5 @@
 <section
-  class="flex h-full min-h-[26rem] flex-col rounded-2xl border border-white/10 bg-slate-950/40 p-4"
+  class="flex h-full min-h-0 flex-col rounded-2xl border border-white/10 bg-slate-950/40 p-4"
   aria-labelledby="map-view-title"
 >
   <div class="flex items-start justify-between gap-3">
