--- a/src/app/components/right-panel/right-panel.component.scss
+++ b/src/app/components/right-panel/right-panel.component.scss
@@ -3,3 +3,27 @@
   height: 100%;
   min-height: 0;
 }
+
+.right-panel-scroll {
+  scrollbar-width: thin;
+  scrollbar-color: rgb(148 163 184 / 0.65) rgb(15 23 42 / 0.35);
+}
+
+.right-panel-scroll::-webkit-scrollbar {
+  width: 10px;
+}
+
+.right-panel-scroll::-webkit-scrollbar-track {
+  border-radius: 999px;
+  background: rgb(15 23 42 / 0.35);
+}
+
+.right-panel-scroll::-webkit-scrollbar-thumb {
+  border: 2px solid transparent;
+  border-radius: 999px;
+  background: linear-gradient(rgb(148 163 184 / 0.75), rgb(100 116 139 / 0.8)) padding-box;
+}
+
+.right-panel-scroll::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(rgb(186 230 253 / 0.85), rgb(125 211 252 / 0.9)) padding-box;
+}
